--- a/sockets-webproxy-client/pom.xml
+++ b/sockets-webproxy-client/pom.xml
@@ -4,10 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.nhom2</groupId>
-    <artifactId>sockets-webproxy</artifactId>
+    <parent>
+        <groupId>com.groupsecond</groupId>
+        <artifactId>sockets-webproxy</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <artifactId>sockets-webproxy-client</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>sockets-webproxy</name>
+    <name>sockets-webproxy-client</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -100,7 +105,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.nhom2.socketswebproxy/com.nhom2.socketswebproxy.SocketsApplication</mainClass>
+                            <mainClass>com.groupsecond.socketswebproxy/com.groupsecond.socketswebproxy.SocketsApplication</mainClass>
                         </configuration>
                     </execution>
                 </executions>
