--- a/sockets-webproxy-common/pom.xml
+++ b/sockets-webproxy-common/pom.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.groupsecond</groupId>
-    <artifactId>sockets-webproxy</artifactId>
+    <artifactId>sockets-webproxy-common</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>sockets-webproxy</name>
-    <packaging>pom</packaging>
+
+    <parent>
+        <groupId>com.groupsecond</groupId>
+        <artifactId>sockets-webproxy</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.version>5.7.1</junit.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -22,4 +26,5 @@
             <version>2.8.8</version>
         </dependency>
     </dependencies>
+
 </project>
