--- a/sockets-webproxy-server/pom.xml
+++ b/sockets-webproxy-server/pom.xml
@@ -23,6 +23,7 @@
         <dependency>
             <groupId>com.groupsecond</groupId>
             <artifactId>sockets-webproxy-common</artifactId>
+            <scope>compile</scope>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
@@ -37,13 +38,27 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.groupsecond.socketswebproxyserver.ServerApplication</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
             </plugin>
         </plugins>
     </build>
